# CellTail

./: .gitignore  Cargo.toml  README.md
.github/workflows/: pages  pages.yml
examples/: characters.ct  counter.ct  functions.ct  hello world 3.ct  hello_world 2.ct  hello_world.ct  lists.ct  logic_operators_test.ct  primes.ct  sort copy.ct  sort.ct  test_file.ct
src/: checker.rs  errors.rs  interpreter.rs  lexer.rs  main.rs  parser.rs  shell_tools.rs  tokenizer.rs  wasm_output.rs
src/parser/: mod.rs  parse_array.rs  parse_attribute.rs  parse_expression.rs  parse_pattern.rs
src/runtime/: attributes.rs  expression.rs  literal.rs  mod.rs  pattern.rs  pattern_list.rs
web_demo/: index.html  syntax.js
