[package]
name = "cell_tail"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2"
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1.7"
serde={ version = "1.0.0", features = ["derive"] }
serde_json="1.0.0"